--- a/index.html
+++ b/index.html
@@ -1,55 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Checkpoint 1</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="header-row">
-        <div class="header-logo">
-            Header Logo
-        </div>
-        <ul class="header-links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+      <div class="header-logo">Header Logo</div>
+      <ul class="header-links">
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+      </ul>
     </div>
     <div class="landing-body">
-        <div class="text-body">
-            <h1 class="hero-main-text">This website is awesome</h1>
-            <p class="hero-secondary-text"> This website has some subtext that goes here
-                under the main title. It's a smaller font and 
-                the color is lower contrast
-            </p>
-            <button class="button1">Sign up</button>
-        </div>
-        <img class="swim1" src="./img/swim1.jpg" alt="man swimming">
+      <div class="text-body">
+        <h1 class="hero-main-text">This website is awesome</h1>
+        <p class="hero-secondary-text">
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast
+        </p>
+        <button class="button1">Sign up</button>
+      </div>
+      <img class="swim1" src="./img/swim1.jpg" alt="man swimming" />
     </div>
 
-    <div class="random-container">
-        Some random information.
-    </div>
+    <div class="random-container">Some random information.</div>
     <div class="images">
-        <div class="img">
-            <img class="sec2img" src="./img/img1.jpg" alt="pic 1">
-            <p class="sec2text">this is some subtext under an illustration or image</p>
-        </div>
-        <div class="img">
-            <img class="sec2img" src="./img/img2.jpg" alt="pic 2">
-            <p class="sec2text">this is some subtext under an illustration or image</p>
-        </div>
-        <div class="img">
-            <img class="sec2img" src="./img/img3.jpg" alt="pic 2">
-            <p class="sec2text">this is some subtext under an illustration or image</p>
-        </div>
-        <div class="img">
-            <img class="sec2img" src="./img/img4.jpg" alt="pic 3">
-            <p class="sec2text">this is some subtext under an illustration or image</p>
+      <div class="img">
+        <img class="sec2img" src="./img/img1.jpg" alt="pic 1" />
+        <p class="sec2text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+      <div class="img">
+        <img class="sec2img" src="./img/img2.jpg" alt="pic 2" />
+        <p class="sec2text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+      <div class="img">
+        <img class="sec2img" src="./img/img3.jpg" alt="pic 2" />
+        <p class="sec2text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+      <div class="img">
+        <img class="sec2img" src="./img/img4.jpg" alt="pic 3" />
+        <p class="sec2text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+    </div>
+
+    <div class="quote-sec">
+      <p class="quote">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
+      </p>
+      <p class="author">-Thor, God of Thunder</p>
+    </div>
+
+    <div class="cta-sec">
+        <div class="blue-sec">
+            <div class="left">
+                <p class="cta-title">Call to action! It's time!</p>
+                <p class="cta-text">
+                  Sign up for our product by clicking that button right over there!
+                </p>
+              </div>
+              <button class="signup-button">Sign up</button>
+            </div>
         </div>
     </div>
-</body>
+
+    <div class="footer">
+        <p class="footer text">Copyright © The Odin Project 2021</p>
+    </div>
+  </body>
 </html>
